# chimera_v2.0

./: .flake8  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Chimera Project Governance.md  GOVERNANCE.md  LICENSE  LICENSE-2.0.txt  Makefile  README.md  SECURITY.md  _CHIMERA  (1).md  _CHIMERA .md  pyproject.toml  requirements.txt  test.ipynb
.github/ISSUE_TEMPLATE/: bug-report-template.md  bug_report  bug_report.md
.github/workflows/: codeql.yml
architecture/: api_design_guide.md  system_architecture.md
clinical/: endpoints.md
clinical/advisory_board/: Chimera Clinical Advisory Board Charter (Indian Edition with FDA Annexure).md  advisory_board_charter.md  advisory_board_charter_(with_fda_annexure).md  charter.md  enhanced_advisory_board_charter.md  fda_advisory_board_charter.md  unified_advisory_board.md  unified_advisory_board_charter_(with_fda_annexure).md
clinical/advisory_board/archive/: fda_advisory_board_charter.md  indian_advisory_board_charter.md
data/: .gitignore
data/governance/: data_dictionary.md  data_quality_metrics.md
docs/: usage_guide.md
models/: .gitignore
notebooks/eegencoder_experiments/: 01_load_bcic4_2a.ipynb  02_train_eegencoder.ipynb  03_raspberry_pi_deploy.ipynb  04_preprocessing_analysis.ipynb
regulatory/: cdsco_strategy.md  fda_strategy.md
regulatory/compliance/: 21cfr820_alignment.md  mdr2017_alignment.md  samd_classification.md
regulatory/risk_management/: fda_risk_analysis.md  indian_risk_analysis.md  indian_risk_management_plan.md  new_risk_management.md  risk_analysis.md  risk_controls.md  risk_management_plan.md  unified_risk_management.md
regulatory/risk_management/archive/: fda_risk_controls.md  fda_risk_management_plan.md  indian_risk_controls.md
research/:  ethics_framework.md  Research Impact Assessment Framework for Chimera Project.md  Research Roadmap for Chimera Project.md  citation_guidelines.md  collaboration_process.md  data_sharing_protocols.md  intellectual_property_strategy.md  publication_process.md
security/: glossary.md  secure_coding_guidelines.md  security_policy.md
security/architecture/: security_architecture.md
security/controls/: security_control_matrix.md
security/policies/: access_control_policy.md  data_protection_policy.md  incident_response_policy.md  secure_development_policy.md
security/review_checklists/: security_code_review_checklist.md
security/security_testing/: security_testing_plan.md
security/security_testing/checklists/: api_security_checklist.md
security/security_testing/templates/: security_test_case_template.md
security/security_testing/tool_configs/: owasp_zap_config.md
security/threat_models/: neural_signal_processing_pipeline.md
security/tools/compliance_validator/: README.md
security/tools/med_device_scanner/: README.md
security/tools/neural_fuzzer/: README.md
src/eegencoder/: __init__.py  data_loader.ipynb  data_loader.py  model.py  train.py
